@@ -43,6 +43,8 @@ Version 1.11.0+svn:
      be presented as options.
    * The statistics window can now show per-scenario statistics.
    * The sidebar now includes specials when reporting a weapon's damage.
+   * The sidebar now includes all specials when reporting a weapon's number of
+     attacks (not just swarm).
 
  * Whiteboard
    * Don't end turn if executing all actions in another way than using the "end turn" button/hotkey. (bug #19901)
